# fundamentals-of-data-transformation-4554074

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt  scratch.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
course/01-intro/: course-goal.md
course/01-intro/resources/: learning.md
course/02-duckdb/exercises/: ex-01.ipynb  ex-02.ipynb  excecise.ipynb
course/02-duckdb/lessons/: 00-duckdb-basics.ipynb  01-query-basics-columnar-ops.ipynb  01-wrangling-unstructured-data.ipynb  02-aggregations.ipynb  02-filter-select-order-group.ipynb  02-select-filter-order-group.ipynb  03-CTEs-and-query-structure.ipynb  03-aggregations.ipynb  04-windows.ipynb  05-advanced-filters.ipynb  06-advanced-joins.ipynb  07-lambdas-and-udfs.ipynb  08-data-generation.ipynb  09-lambdas-and-UDFs.ipynb  10-data-generation.ipynb
course/02_duckdb/: 02-01-getting_started.ipynb
course/05-resources/: learning.md
course/utils/: bigquery_extract.ipynb  nps_raw_extract.ipynb
data/nps/: nps_public_data_activities.parquet  nps_public_data_amenities__parksplaces.parquet  nps_public_data_lessonplans.parquet  nps_public_data_multimedia__audio.parquet  nps_public_data_multimedia__galleries.parquet  nps_public_data_parkinglots.parquet  nps_public_data_passportstamplocations.parquet  nps_public_data_topics.parquet  nps_public_data_topics__parks.parquet  nps_public_data_tours.parquet  nps_public_data_visitorcenters.parquet  nps_public_data_webcams.parquet  schema.sql
utils/: nps_raw_extract.ipynb
(+64 files in other folders)
