[tool.jupysql.SqlMagic]
feedback = true
autopandas = true
displaylimit = 10
displaycon = false

[tool.poetry]
name = "fundamentals-of-data-transformation"
version = "1.0.0"
description = "LinkedIn Learning course on the fundamentals of data transformation using SQL & Pandas."
authors = ["Matt Palmer"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
black={extras = ["jupyter"], version = "24.3.0"}
duckdb="0.10.1"
faker="23.2.1"
ipywidgets="7.7.1"
isort="5.13.2"
jupysql="0.10.10"
jupyter="1.0.0"
notebook="7.0.7"
pandas="2.2.0"
plotly="5.20.0"
pre-commit="3.6.0"
pyarrow="15.0.0"
toml="0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
